# BulkFormer

./: .gitignore  AGENTS.md  README.md  bulkformer.yaml  bulkformer.yml  bulkformer_extract_feature.ipynb  pyproject.toml
bulkformer/: __init__.py  config.py
bulkformer/cli/: __init__.py  download.py  extract.py  main.py  verify.py
bulkformer/models/: __init__.py  encoder.py  model.py  rope.py
bulkformer/utils/: __init__.py  features.py
data/: README.md  gene_length_df.csv  high_var_gene_list.pt
model/: README.md  config.py
notebooks/: bulkformer_extract_feature.ipynb
utils/: BulkFormer.py  BulkFormer_block.py  Encoder_block.py  Rope.py
